specified height for header. Navigation is no longer cut off in safari.

--- a/WEB/SITES/FINAL PROJECT/css/master.css
+++ b/WEB/SITES/FINAL PROJECT/css/master.css
@@ -23,6 +23,7 @@ header {
 	top: 0px;
 	left: 0;
 	width: 100%;
+	height: 130px;
 	margin: 0;
 	padding: 0px;
 	overflow: hidden;
